--- a/serverless.yml
+++ b/serverless.yml
@@ -69,4 +69,14 @@ functions:
     events:
       - http:
           path: notes
-          method: get          
+          method: get
+  
+  update:
+    # Defines an HTTP API endpoint that calls the main function in update.js
+    # - path: url path is /notes/{id}
+    # - method: PUT request
+    handler: update.main
+    events:
+      - http:
+          path: notes/{id}
+          method: put
