--- a/services/notes/serverless.yml
+++ b/services/notes/serverless.yml
@@ -19,7 +19,7 @@ resources:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: prod
+  stage: dev
   region: us-east-1
 
   lambdaHashingVersion: 20201221
